docs: update architecture for multi-project MCP, fix outdated references, split implementation details
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>